1998-07-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c, ui.c: changed some things because of GnomeMDI
	changes.

1998-07-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c: changed document menu callbacks because of
	changes in GnomeMDI.
	* callbacks.c (get_search_string): fixed a small bug with capital
	letters in hex values.
	
1998-07-01  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* ghex.desktop: Added Portuguese translation.

1998-06-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-support.c, main.c: now ghex does proper SM. currently
	the only state it saves and restores are open files.
	
1998-06-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.c: let conversion callback handle erroneus values.
	* ghex.h, ui.c : minor changes to Converter structure and
	create_converter() function.
	
1998-06-18  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c: put "Group Data As" menu back to document's
	menu structure.
	* callbacks.[ch]: moved callbacks for document's menuitems to
	hex-document.c.

1998-06-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c: added create_converter() fucntion that creates a
	base conversion dialog.
	* callbacks.[ch]: some stuff for base conversion.
	
1998-06-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c: added radio buttons to find/replace dialogs  to enable
	user to nicely choose between hex and ascii mode.
	* ghex.h, ui.c, callbacks.c: now we store pointers to all the
	find/replace/jump dialog widgets and find/replace search type
	in a [Find|Replace|Jump]Dialog structs. Relevant callbacks were
	modified to accomodate this.

1998-06-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: moved to gnome-libs/libgnomeui
	* gnome-mdi-child.[ch]: (ex gnome-document.[ch]) moved to
	gnome-libs/libgnomeui
	* Makefile.am: changed to accomodate the above
	
1998-06-03  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: major cleanup of gnome-mdi code. looks much better