@@ -1,3 +1,12 @@
+1998-07-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* ui.c, hex-document.c: use more GNOME_STOCK items.
+	
+1998-07-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* ui.c (create_prefs_dialog): use gtk_notebook_append_page() instead
+	of gnome_property_box_append_page().
+	
 1998-07-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* main.c, ui.c: changed some things because of GnomeMDI
